[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mixupy"
authors = [{name = "makeyourownmaker", email = "makeyourownmaker@gmx.com"}]
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/makeyourownmaker/mixupy"

description-file = "https://github.com/makeyourownmaker/mixupy/README.md"
