[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mixupy"
author = "makeyourownmaker"
author-email = "makeyourownmaker@gmx.com"
home-page = "https://github.com/makeyourownmaker/mixupy"
requires-python = ">=3.7"
description-file = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
]

[tool.black]
line-length = 100
